--- a/home1.html
+++ b/home1.html
@@ -220,7 +220,7 @@ Our brokerage solutions streamline residential decisions and strengthen commerci
         <img src="assets/images/features4.webp" alt="Payroll Management">
         <div class="card-content">
           <h3>Expert Negotiation Support</h3>
-          <p>Our skilled negotiators work tirelessly to secure strong deals and ensure every client receives true property value.</p>
+          <p>Our skilled negotiators work tirelessly to secure strong deals and ensure every client receives true property value.and stackly</p>
         </div>
       </div>
 
