--- a/login.html
+++ b/login.html
@@ -121,7 +121,7 @@
 
         <div class="actions">
           <label class="small"><input type="checkbox" id="remember"> Remember</label>
-          <a href="#" class="link small">Forgot?</a>
+          <a href="404page.html" class="link small">Forgot?</a>
         </div>
 
         <div style="display:flex;gap:8px;margin-top:6px">
